--- a/circle.yml
+++ b/circle.yml
@@ -8,11 +8,19 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-          name: restore-packages
+          name: Restore Packages
           command: 'dotnet restore'
       - run:
-          name: code-coverage
+          name: Build Artifacts
           command: 'dotnet publish --output /out/ --configuration Release'
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       # build and push Docker image
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
