--- a/circle.yml
+++ b/circle.yml
@@ -24,6 +24,6 @@ jobs:
       # build and push Docker image
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t jarga/netcoreexample:$TAG .
+          docker build -t $DOCKER_USER/netcoreexample:$TAG .
           docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker push jarga/netcoreexample:$TAG
+          docker push $DOCKER_USER/netcoreexample:$TAG
