--- a/circle.yml
+++ b/circle.yml
@@ -9,10 +9,10 @@ jobs:
       - setup_remote_docker
       - run:
           name: Restore Packages
-          command: 'dotnet restore'
+          command: 'dotnet restore ./src/app/'
       - run:
           name: Build Artifacts
-          command: 'dotnet publish -o ./publish --configuration Release'
+          command: 'dotnet publish ./src/app/ -o ./src/app/publish --configuration Release'
       - run:
           name: Install Docker client
           command: |
