--- a/docker-compose.release.yml
+++ b/docker-compose.release.yml
@@ -7,8 +7,8 @@ services:
         restart: on-failure
         healthcheck:
             test: ["CMD", "nc", "-zvv", "localhost", "27017"]
-            interval: 1m30s
-            timeout: 10s
+            interval: 3m
+            timeout: 60s
             retries: 3
     rabbitmq:
         image: rabbitmq:3.6.1-management
@@ -17,8 +17,8 @@ services:
             - "5672:5672"
         healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:15672"]
-            interval: 1m30s
-            timeout: 10s
+            interval: 3m
+            timeout: 60s
             retries: 3
         restart: on-failure
     worker:
