--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "Debug PreLaunch",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceRoot}/src/app/bin/Debug/netcoreapp1.1/NetCoreExample.dll",
             "args": [],
