--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -2,6 +2,8 @@ version: '3.1'
 services:
     mongo:
         image: "mongo:3"
+        ports:
+            - "27017:27017"
         deploy:
             replicas: 1
             update_config:
