--- a/src/worker/Dockerfile
+++ b/src/worker/Dockerfile
@@ -1,5 +1,19 @@
+FROM microsoft/dotnet:2.1-sdk as build-env
+
+COPY ./worker/Worker.csproj /worker/
+COPY ./shared/Shared.csproj /shared/
+
+WORKDIR /worker
+
+RUN dotnet restore
+
+COPY ./worker /worker
+COPY ./shared /shared
+
+RUN dotnet publish -o publish
+
 FROM microsoft/dotnet:2.1-runtime
 
 WORKDIR /app
-COPY ./publish .
+COPY --from=build-env /worker/publish .
 ENTRYPOINT ["dotnet", "Worker.dll"]
