--- a/circle.yml
+++ b/circle.yml
@@ -2,17 +2,26 @@ version: 2
 jobs:
   build:
     working_directory: ~/NetCoreExample
-    docker:
-      - image: docker/dind
+    docker: 
+        - image: microsoft/dotnet:2.1-sdk
     steps:
-      - checkout
+        - checkout
+        - setup_remote_docker
+        - run: 
+            name: Install Docker client 
+            command: | 
+                set -x 
+                VER="17.03.0-ce" 
+                curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz 
+                tar -xz -C /tmp -f /tmp/docker-$VER.tgz 
+                mv /tmp/docker/* /usr/bin 
       # build and push Docker image
-      - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t $DOCKER_USER/netcorewebexample:$TAG -t $DOCKER_USER/netcorewebexample:latest ./src/app/
-          docker build -t $DOCKER_USER/netcoreworkerexample:$TAG -t $DOCKER_USER/netcoreworkerexample:latest ./src/worker/
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
-          docker push $DOCKER_USER/netcorewebexample:$TAG
-          docker push $DOCKER_USER/netcoreworkerexample:$TAG
-          docker push $DOCKER_USER/netcorewebexample:latest
-          docker push $DOCKER_USER/netcoreworkerexample:latest
+        - run: |
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            docker build -t $DOCKER_USER/netcorewebexample:$TAG -t $DOCKER_USER/netcorewebexample:latest ./src/app/
+            docker build -t $DOCKER_USER/netcoreworkerexample:$TAG -t $DOCKER_USER/netcoreworkerexample:latest ./src/worker/
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker push $DOCKER_USER/netcorewebexample:$TAG
+            docker push $DOCKER_USER/netcoreworkerexample:$TAG
+            docker push $DOCKER_USER/netcorewebexample:latest
+            docker push $DOCKER_USER/netcoreworkerexample:latest
