--- a/artillery.yml
+++ b/artillery.yml
@@ -2,8 +2,20 @@ config:
   target: "http://smcadams.eastus.cloudapp.azure.com"
   phases:
     -
+      duration: 40
+      arrivalRate: 30
+    -
       duration: 60
-      arrivalRate: 10
+      arrivalRate: 60
+    -
+      duration: 10
+      arrivalRate: 50
+    -
+      duration: 30
+      arrivalRate: 80
+    -
+      duration: 30
+      arrivalRate: 20
 scenarios:
   -
     name: "Create and Get"
